<resources>
    <string name="app_name">Boom</string>
    <string name="language_english">English</string>
    <string name="language_arabic">عربي</string>
    <string name="request_otp">Get OTP</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="check_internet_connection">Please check your internet connection and try again.</string>
    <string name="server_not_responding">Server is not responding, try again later!</string>
    <string name="some_technical_issue">Some technical issue, try again after some time.</string>
    <string name="something_went_wrong">Something went wrong, try again later!</string>
    <string name="some_internal_error">Some technical error, try later!</string>
    <string name="unable_to_fetch_information">Unable to fetch information, please try again later!</string>
    <string name="unable_to_fetch_status">Unable to fetch status, please try again later!</string>
    <string name="service_error">Service Error</string>
    <string name="verification_code">Verification Code</string>
    <string name="we_have_sent_the_verification_code_to_your_mobile_number">We have sent the verification code to your\nmobile number</string>
    <string name="change_number">&lt;u&gt;Change Number&lt;/u&gt;</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="resend_code">Resend Code</string>
    <string name="please_wait">Please wait..</string>
    <string name="please_enter_otp">Please valid enter otp.</string>
    <string name="select_a_country">Select a Country</string>
    <string name="search_country">Search Country</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="media">Media</string>
    <string name="how_to_play">How to Play</string>
    <string name="winner_list">Winner List</string>
    <string name="results">Results</string>
    <string name="my_account">My Account</string>
    <string name="instant_games">Instant Games</string>
    <string name="draw_games">Draw Games</string>
    <string name="data_not_received_001">Data not received, please try again later. [001]</string>
    <string name="data_not_received_002">Data not received, please try again later. [002]</string>
    <string name="i_have_referral_code">I have referral code</string>
    <string name="select_numbers_to_add_more_lines">Select Numbers to Add More Lines.</string>
    <string name="buy_now_or_continue_to_play">Buy Now or Continue to Play</string>
    <string name="pick_5_numbers">PICK 5 NUMBERS</string>
    <string name="aed">AED</string>
    <string name="per_line">/ PER LINE</string>
    <string name="quick_pick">Quick Pick</string>
    <string name="_0_of_5">0 OF 5</string>
    <string name="game_not_found_001">Game not found, please try again later. [001]</string>
    <string name="game_not_found_002">Game not found, please try again later. [002]</string>
    <string name="game_not_found_003">Game not found, please try again later. [003]</string>
    <string name="game_not_found_004">Game not found, please try again later. [004]</string>
    <string name="game_not_found_005">Game not found, please try again later. [005]</string>
    <string name="game_not_found_006">Game not found, please try again later. [006]</string>
    <string name="game_not_found_007">Game not found, please try again later. [007]</string>
    <string name="game_not_found_008">Game not found, please try again later. [008]</string>
    <string name="game_not_found_009">Game not found, please try again later. [009]</string>
    <string name="game_not_found_010">Game not found, please try again later. [010]</string>
    <string name="game_not_found_011">Game not found, please try again later. [011]</string>
    <string name="game_not_found_012">Game not found, please try again later. [012]</string>
    <string name="game_not_found_013">Game not found, please try again later. [013]</string>
    <string name="game_not_found_014">Game not found, please try again later. [014]</string>
    <string name="game_not_found_015">Game not found, please try again later. [015]</string>
    <string name="you_have_reached_max_selection_limit">You have reached the max selection limit.</string>
    <string name="of">OF</string>
    <string name="draw">Draw</string>
    <string name="buy_now">BUY NOW</string>
    <string name="max_panel_limit">You have reached maximum panel limit.</string>
    <string name="complete_line_to_delete">Complete line to delete.</string>
    <string name="some_problem_occurred">Some problem occurred, try again after sometime.</string>
    <string name="select_number_of_draws">Select Number Of Draws</string>
    <string name="for_next">FOR NEXT</string>
    <string name="draws">DRAWS</string>
    <string name="draws_small">Draws</string>
    <string name="draws_not_available">Draws not available.</string>
    <string name="next_draw">NEXT DRAW</string>
    <string name="next_draw_small">Next Draw</string>
    <string name="only">ONLY</string>
    <string name="draw_ends_in">Draw\nEnds In:</string>
    <string name="days">Days</string>
    <string name="hours">Hrs</string>
    <string name="minutes">Mins</string>
    <string name="seconds">Secs</string>
    <string name="jackpot">JACKPOT</string>
    <string name="jackpot_small">Jackpot</string>
    <string name="next">Next</string>
    <string name="one_draw_is_mandatory_to_proceed">One \'Draw\' is mandatory to proceed</string>
    <string name="incomplete_line">Incomplete Line</string>
    <string name="proceed_discarding_last_line">Proceed discarding last line</string>
    <string name="complete_last_line">Complete last line</string>
    <string name="no_lines_selected">No lines selected.</string>
    <string name="you_have_selected_only">(You have selected only</string>
    <string name="number_out_of">number out of</string>
    <string name="win_up_to">Win up to</string>
    <string name="session_expired">Session expired, please login again.</string>
    <string name="starts_in">Starts in</string>
    <string name="play_now">Play Now</string>
    <string name="version">Version:</string>
    <string name="hello_guest">Hello, Guest!</string>
    <string name="login_to_explore">Login to explore more.</string>
    <string name="hi_comma">Hi,</string>
    <string name="mobile">Mobile</string>
    <string name="login">LOGIN</string>
    <string name="login_small">Login</string>
    <string name="my_tickets">My Tickets</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instant_game">Instant Game</string>
    <string name="draw_game">Draw Game</string>
    <string name="boom_5">Boom 5</string>
    <string name="won">won</string>
    <string name="won_cap">WON</string>
    <string name="loading">Loading…</string>
    <string name="information_not_available">Information not available at the moment. Please try again later.</string>
    <string name="transactions">Transactions</string>
    <string name="today">Today</string>
    <string name="last_ten_transaction">Last 10 Transaction</string>
    <string name="last_seven_days">Last 7 Days</string>
    <string name="last_thirty_days">Last 30 Days</string>
    <string name="last_six_months">Last 6 Months</string>
    <string name="custom">Custom</string>
    <string name="to">to</string>
    <string name="my_transactions">My Transactions</string>
    <string name="na">NA</string>
    <string name="wager">Wager</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="winning">Winning</string>
    <string name="cash_in">Cash In</string>
    <string name="cash_out">Cash Out</string>
    <string name="refund">Refund</string>
    <string name="withdrawal_cancel">Withdrawal\nCancel</string>
    <string name="wager_refund">Wager\nRefund</string>
    <string name="txn_id">Txn Id:</string>
    <string name="debit_amount">Debit Amount:</string>
    <string name="credit_amount">Credit Amount:</string>
    <string name="transactions_not_found">Transactions not found.</string>
    <string name="tickets_not_found">Tickets not found.</string>
    <string name="draw_colon">Draw:</string>
    <string name="player_id">Player Id:</string>
    <string name="draw_time">Draw Time</string>
    <string name="result_awaited">Result\nAwaited</string>
    <string name="better_luck">Better Luck\nNext Time</string>
    <string name="cancelled">Cancelled</string>
    <string name="draw_result">DRAW RESULT</string>
    <string name="draw_result_small">Draw Result:</string>
    <string name="better_luck_next_time">Better Luck Next Time</string>
    <string name="congratulations_you_have_won">Congratulations!\nYou have won</string>
    <string name="result_awaited_caps">RESULT AWAITED</string>
    <string name="transaction_time">Transaction Time</string>
    <string name="draw_id">Draw ID</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="ticket_number">Ticket Number</string>
    <string name="played_numbers">Numbers You Played</string>
    <string name="watch_draw">Watch Draw</string>
    <string name="play_again_same_number">Play Again Same Number</string>
    <string name="ticket">Ticket</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="inbox">Inbox</string>
    <string name="winners">Winners</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="search_your_message_here">Search your message here</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="search">Search</string>
    <string name="nothing_to_delete">Nothing to delete.</string>
    <string name="no_mails_found">No mails found.</string>
    <string name="message">Message</string>
    <string name="en">EN</string>
    <string name="ar">AR</string>
    <string name="uae">UAE</string>
    <string name="choose_5_out_of_30_numbers_for_daily_draws_more_than_aed_10_000_won_everyday">Choose 5 out of 30 numbers for daily draws. More than AED 10,000 won everyday</string>
    <string name="instant_win">Instant Win</string>
    <string name="various_themes_available_to_win_instantly">Various themes available to win instantly</string>
    <string name="match">MATCH</string>
    <string name="winners_caps">WINNERS</string>
    <string name="prize_pool">PRIZE POOL</string>
    <string name="winnings">WINNINGS</string>
    <string name="add_draw">Add Draw</string>
    <string name="country">Country</string>
    <string name="select_country">Select Country</string>
    <string name="city">City</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="make_sure_all_details_are_as_per_your_id_proof">Make sure all details are as per your ID proof.</string>
    <string name="state">State</string>
    <string name="add_more_draw">ADD MORE DRAW</string>
    <string name="same_number">Same Numbers.</string>
    <string name="multiple_draw">Multiples Draws.</string>
    <string name="you_can_use_your_favourite_numbers">You can use your favorite\nnumbers for multiple draws.</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="town">Town</string>
    <string name="zip_code">Zip code</string>
    <string name="update">Update</string>
    <string name="enter_address_Line1">Enter Address Line 1</string>
    <string name="enter_address_Line2">Enter Address Line 2</string>
    <string name="enter_town">Enter Town</string>
    <string name="enter_zipcode">Enter ZipCode</string>
</resources>