<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_background_color"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        tools:context=".ui.fragment.WithdrawIdVerificationFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/fragment_background_color"
                android:gravity="start"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/make_sure_all_details_are_as_per_your_id_proof"
                    android:textAlignment="viewStart"
                    android:textColor="#9900004c"
                    android:textDirection="locale"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/address_line_1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/color_app_base_blue"
                    android:textDirection="locale"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.skilrock.boomlotto.utility.BoomTextInputLayout
                    android:id="@+id/tilAddressLine1"
                    style="@style/AppTextInputLayoutStyle"
                    android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAddressLine1"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:gravity="start|center_vertical"
                        android:hint="@string/enter_address_Line1"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/color_app_base_blue"
                        android:textColorHint="#A7A8C2"
                        android:textDirection="locale"
                        android:textSize="16sp" />

                </com.skilrock.boomlotto.utility.BoomTextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/address_line_2"
                    android:textAlignment="viewStart"
                    android:textColor="@color/color_app_base_blue"
                    android:textDirection="locale"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.skilrock.boomlotto.utility.BoomTextInputLayout
                    android:id="@+id/tilAddressLine2"
                    style="@style/AppTextInputLayoutStyle"
                    android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAddressLine2"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:gravity="start|center_vertical"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:hint="@string/enter_address_Line2"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/color_app_base_blue"
                        android:textColorHint="#A7A8C2"
                        android:textDirection="locale"
                        android:textSize="16sp" />

                </com.skilrock.boomlotto.utility.BoomTextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/town"
                    android:textAlignment="viewStart"
                    android:textColor="@color/color_app_base_blue"
                    android:textDirection="locale"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.skilrock.boomlotto.utility.BoomTextInputLayout
                    android:id="@+id/tilTown"
                    style="@style/AppTextInputLayoutStyle"
                    android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTown"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:gravity="start|center_vertical"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:hint="@string/enter_town"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/color_app_base_blue"
                        android:textColorHint="#A7A8C2"
                        android:textDirection="locale"
                        android:textSize="16sp" />

                </com.skilrock.boomlotto.utility.BoomTextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/zip_code"
                    android:textAlignment="viewStart"
                    android:textColor="@color/color_app_base_blue"
                    android:textDirection="locale"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.skilrock.boomlotto.utility.BoomTextInputLayout
                    android:id="@+id/tilZipCode"
                    style="@style/AppTextInputLayoutStyle"
                    android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etZipCode"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:gravity="start|center_vertical"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:hint="@string/enter_zipcode"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/color_app_base_blue"
                        android:textColorHint="#A7A8C2"
                        android:textDirection="locale"
                        android:textSize="16sp" />

                </com.skilrock.boomlotto.utility.BoomTextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/country"
                    android:textAlignment="viewStart"
                    android:textColor="@color/color_app_base_blue"
                    android:textDirection="locale"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.skilrock.boomlotto.utility.BoomTextInputLayout
                    android:id="@+id/tilCountry"
                    style="@style/AppTextInputLayoutStyle"
                    android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCountry"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:clickable="false"
                        android:drawableEnd="@drawable/down_arrow_light"
                        android:focusable="false"
                        android:gravity="start|center_vertical"
                        android:hint="@string/select_country"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/color_app_base_blue"
                        android:textColorHint="#A7A8C2"
                        android:textDirection="locale"
                        android:textSize="16sp" />

                </com.skilrock.boomlotto.utility.BoomTextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/state"
                    android:textAlignment="viewStart"
                    android:textColor="@color/color_app_base_blue"
                    android:textDirection="locale"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.skilrock.boomlotto.utility.BoomTextInputLayout
                    android:id="@+id/tilState"
                    style="@style/AppTextInputLayoutStyle"
                    android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etState"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:clickable="false"
                        android:drawableEnd="@drawable/down_arrow_light"
                        android:focusable="false"
                        android:gravity="start|center_vertical"
                        android:hint="@string/select_state"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/color_app_base_blue"
                        android:textColorHint="#A7A8C2"
                        android:textDirection="locale"
                        android:textSize="16sp" />

                </com.skilrock.boomlotto.utility.BoomTextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/city"
                    android:textAlignment="viewStart"
                    android:textColor="@color/color_app_base_blue"
                    android:textDirection="locale"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.skilrock.boomlotto.utility.BoomTextInputLayout
                    android:id="@+id/tilCity"
                    style="@style/AppTextInputLayoutStyle"
                    android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCity"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:clickable="false"
                        android:drawableEnd="@drawable/down_arrow_light"
                        android:focusable="false"
                        android:gravity="start|center_vertical"
                        android:hint="@string/select_city"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/color_app_base_blue"
                        android:textColorHint="#A7A8C2"
                        android:textDirection="locale"
                        android:textSize="16sp" />

                </com.skilrock.boomlotto.utility.BoomTextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnProceed"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/color_app_pink"
                    android:elevation="5dp"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="20dp"
                    app:elevation="5dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>