<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="15dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:textDirection="locale"
                android:text="@string/add_more_draw"
                android:textColor="@color/color_app_base_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBtnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:src="@drawable/ic_icon_cross"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_referral_one"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="24dp"
            android:textDirection="locale"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/color_app_purple"
            android:text="@string/same_number" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textDirection="locale"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/color_app_purple"
            android:layout_marginBottom="8dp"
            android:text="@string/multiple_draw" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"
            android:textColor="@color/color_app_base_blue"
            android:textAlignment="center"
            android:textDirection="locale"
            android:text="@string/you_can_use_your_favourite_numbers" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDraws"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="22dp"
            android:visibility="invisible"
            android:layoutAnimation="@anim/layout_animation_pick_up"
            android:layout_marginEnd="22dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"
            android:textColor="@color/color_app_base_blue"
            android:textAlignment="center"
            android:textDirection="locale"
            android:text="@string/a_minimum_1_draw_must..." />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOkay"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/activity_padding"
            android:layout_marginStart="@dimen/activity_padding"
            app:backgroundTint="@color/color_app_pink"
            android:layout_height="60dp"
            app:cornerRadius="20dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/add_draw" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>